# B_ECC-Cpp-version_plot-capabilities_noGUI

./: .gitignore  CMakeLists.txt  README.md  asym.cpp  calculations.cpp  input.cpp  main.cpp  matplotlibcpp.h  one_matrix.cpp  plotting.cpp  riemann_sum.cpp  rzero.cpp  switchcase.cpp
conicity/: asym.cpp  calculations.cpp
main/: main.cpp
postpro/: one_matrix.cpp
src/conicity/: asym.cpp  calculations.cpp  sym.cpp
src/postpro/: one_matrix.cpp
src/prepro/: riemann_sum.cpp  rzero.cpp  switchcase.cpp
src/util/: input.cpp  plotting.cpp
test/: test.cpp
util/src/: plotting.cpp
